--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -21,7 +21,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     </ListView>
-
+<FrameLayout
+    android:id="@+id/master_list_id"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"></FrameLayout>
 
 
 </LinearLayout>
