--- a/app/src/main/res/layout-land/recipe_step_fragment.xml
+++ b/app/src/main/res/layout-land/recipe_step_fragment.xml
@@ -9,19 +9,16 @@
         android:layout_weight="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
-        android:layout_weight="1"
         android:id="@+id/exoplayer_id"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="match_parent">
 
     </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
 
     <TextView
         android:textSize="25sp"
         android:id="@+id/recipe_instruction"
-        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp" />
     <Button
