--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -1,30 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".RecipeDetails">
 
-    <TextView
-        android:id="@+id/ingredients_tv"
-        android:background="@android:color/darker_gray"
-        android:padding="20dp"
-        android:gravity="center_horizontal"
-        android:text="@string/ingredients"
+    <fragment
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/master_list_fragment"
+        android:name="hantaro.com.bakingapp.MasterListFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <ListView
-
-        android:id="@+id/simple_list_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </ListView>
-<FrameLayout
-    android:id="@+id/master_list_id"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"></FrameLayout>
+        android:layout_height="match_parent"></fragment>
 
 
-</LinearLayout>
