--- a/app/src/main/res/layout/master_list_fragment.xml
+++ b/app/src/main/res/layout/master_list_fragment.xml
@@ -4,16 +4,16 @@
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/ingredients_tv"
-        android:background="@android:color/darker_gray"
+        android:background="@android:color/holo_orange_light"
         android:padding="20dp"
         android:gravity="center_horizontal"
         android:text="@string/ingredients"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <ListView
+    <android.support.v7.widget.RecyclerView
 
         android:id="@+id/simple_list_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-    </ListView>
+    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
