--- a/app/src/main/res/layout/recipe_layout.xml
+++ b/app/src/main/res/layout/recipe_layout.xml
@@ -5,19 +5,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp">
     <ImageView
+        android:id="@+id/recipe_iv"
         android:layout_centerHorizontal="true"
         android:src="@drawable/card_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 <TextView
     android:textAllCaps="true"
-    android:text="recipe"
+    android:text="@string/recipe"
     android:textStyle="bold"
     android:layout_centerHorizontal="true"
     android:gravity="center_horizontal"
     android:textSize="30dp"
     android:textColor="@android:color/holo_red_dark"
     android:id="@+id/recipe_tv"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
 </RelativeLayout>
